# poetry-python-minimum

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
src/: app.py
