[tool.poetry]
name = "poetry add pydantic fastapi \"uvicorn[standerd]\""
version = "0.1.0"
description = ""
authors = ["TakumiOda <xiaotiantakumi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
fastapi = "^0.89.1"
uvicorn = {extras = ["standerd"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
